# qingxiaoyun-storytelling

./: CMakeLists.txt  LICENSE  README.md
inc/: lws_config.h  pv_speaker.h
lib/: libwebsockets.so.19
resource/: qingxiaoyun_zh_raspberry-pi_v3_0_0.ppn  two_speaker_architect.txt  two_speaker_communicate.txt  two_speaker_education.txt  two_speaker_entertain.txt  two_speaker_food.txt  two_speaker_light.txt  two_speaker_medical.txt  two_speaker_sport.txt  two_speaker_traffic.txt  two_speaker_weather.txt  two_speakers.txt
src/: CMakeLists.txt  as_aud_capture.c  as_aud_capture.h  as_aud_speak.c  as_aud_speak.h  as_aud_transmit.c  as_aud_transmit.h  as_authorization.c  as_authorization.h  as_config.h  as_event_monitor.c  as_event_monitor.h  as_hotword_detector.c  as_hotword_detector.h  as_mgr.h  as_msg_def.h  main.c
